==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/stm32/src/spi_master/implementation_1/hal_ll_spi_master.c <==
#include "hal_ll_rcc.h"
#include "hal_ll_spi_master.h"
#include "hal_ll_spi_master_pin_map.h"
#define hal_ll_spi_master_get_module_state_address            ((hal_ll_spi_master_handle_register_t *)*handle)
#define hal_ll_spi_master_get_handle                          (hal_ll_spi_master_handle_register_t *)hal_ll_spi_master_get_module_state_address->hal_ll_spi_master_handle
#define hal_ll_spi_master_get_base_struct(_handle)            ((hal_ll_spi_master_base_handle_t *)_handle)
#define hal_ll_spi_master_get_base_from_hal_handle            ((hal_ll_spi_master_hw_specifics_map_t *)((hal_ll_spi_master_handle_register_t *)\
                                                              (((hal_ll_spi_master_handle_register_t *)(handle))->hal_ll_spi_master_handle))->hal_ll_spi_master_handle)->base
#define HAL_LL_SPI_MASTER                                     0x4
#define HAL_LL_SPI_MASTER_SSI_1                               8
#define HAL_LL_SPI_MASTER_SELECTION                           2
#define HAL_LL_SPI_MASTER_FRXTH                               0x1000u
#define HAL_LL_SPI_MASTER_FRXTH                               0
#define HAL_LL_SPI_MASTER_SSOE_BIT                            2
#define HAL_LL_SPI_MASTER_SSOE                                0x4
#define HAL_LL_SPI_MASTER_SSM_ENABLE                          9
#define HAL_LL_SPI_MASTER_SSM_DISABLE                         0x0000u
#define HAL_LL_SPI_MASTER_SS_ENABLE                           0x10000ul

hal_ll_err_t hal_ll_spi_master_register_handle(hal_ll_pin_name_t sck, hal_ll_pin_name_t miso, hal_ll_pin_name_t mosi, hal_ll_spi_master_handle_register_t *handle_map, uint8_t *hal_module_id) {

    hal_ll_spi_pin_id index_list[SPI_MODULE_COUNT] = {HAL_LL_PIN_NC,HAL_LL_PIN_NC,HAL_LL_PIN_NC};
    uint16_t pin_check_result;

    // Check user-defined pins.
    if ((pin_check_result = hal_ll_spi_master_check_pins(sck, miso, mosi, &index_list, handle_map)) == HAL_LL_PIN_NC) {
        return HAL_LL_SPI_MASTER_WRONG_PINS;
    };

    // If user has come with the same SPI hardware module, and with the same pair of the pins, the pin mapping procedure
    // will not have to take a place; otherwise, clear af-s, map new pins, set af-s, and set init state to false.
    if ((hal_ll_spi_master_hw_specifics_map[pin_check_result].pins.sck.pin_name != sck) ||
        (hal_ll_spi_master_hw_specifics_map[pin_check_result].pins.miso.pin_name != miso) ||
        (hal_ll_spi_master_hw_specifics_map[pin_check_result].pins.mosi.pin_name != mosi) ) {

        hal_ll_spi_master_alternate_functions_set_state(&hal_ll_spi_master_hw_specifics_map[pin_check_result], false);

        hal_ll_spi_master_map_pins(pin_check_result, &index_list);

        hal_ll_spi_master_alternate_functions_set_state(&hal_ll_spi_master_hw_specifics_map[pin_check_result], true);

        handle_map[pin_check_result].init_ll_state = false;
    }

    // Return id of the SPI module that is going to be used.
    *hal_module_id = pin_check_result;

    // Insert current module into hal_ll_module_state map.
    hal_ll_module_state[pin_check_result].hal_ll_spi_master_handle = (handle_t *)&hal_ll_spi_master_hw_specifics_map[pin_check_result].base;

    // Return the same info about module one level up ( into the HAL level ).
    handle_map[pin_check_result].hal_ll_spi_master_handle = (handle_t*)&hal_ll_module_state[pin_check_result].hal_ll_spi_master_handle;

    return HAL_LL_SPI_MASTER_SUCCESS;
}

hal_ll_err_t hal_ll_module_configure_spi(handle_t *handle) {
    hal_ll_spi_master_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_spi_master_get_module_state_address);
    hal_ll_spi_master_handle_register_t *hal_handle = (hal_ll_spi_master_handle_register_t *)*handle;
    uint8_t pin_check_result = hal_ll_spi_master_hw_specifics_map_local->module_index;

    hal_ll_spi_master_init(hal_ll_spi_master_hw_specifics_map_local);

    hal_ll_module_state[pin_check_result].hal_ll_spi_master_handle = (handle_t *)&hal_ll_spi_master_hw_specifics_map[pin_check_result].base;
    hal_ll_module_state[pin_check_result].init_ll_state = true;
    hal_handle->init_ll_state = true;

    return HAL_LL_SPI_MASTER_SUCCESS;
}

hal_ll_err_t hal_ll_spi_master_write(handle_t *handle, uint8_t *write_data_buffer, size_t length_data) {
    // Get low level HAL handle.
    low_level_handle = hal_ll_spi_master_get_handle;

    // Get appropriate hw specifics map.
    hal_ll_spi_master_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_spi_master_get_module_state_address);

    hal_ll_spi_master_write_bare_metal(hal_ll_spi_master_hw_specifics_map_local->base, write_data_buffer, length_data);

    return HAL_LL_SPI_MASTER_SUCCESS;
}

hal_ll_err_t hal_ll_spi_master_read(handle_t *handle, uint8_t *read_data_buffer, size_t length_data) {
    // Get low level HAL handle.
    low_level_handle = hal_ll_spi_master_get_handle;

    // Get appropriate hw specifics map.
    hal_ll_spi_master_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_spi_master_get_module_state_address);

    hal_ll_spi_master_read_bare_metal(hal_ll_spi_master_hw_specifics_map_local->base, read_data_buffer, length_data, hal_ll_spi_master_hw_specifics_map_local->dummy_data);

    return HAL_LL_SPI_MASTER_SUCCESS;
}

hal_ll_err_t hal_ll_spi_master_write_then_read(handle_t *handle, uint8_t *write_data_buffer, size_t length_write_data, uint8_t *read_data_buffer, size_t length_read_data) {
    // Get low level HAL handle.
    low_level_handle = hal_ll_spi_master_get_handle;

    // Get appropriate hw specifics map.
    hal_ll_spi_master_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_spi_master_get_module_state_address);

    hal_ll_spi_master_write_bare_metal(hal_ll_spi_master_hw_specifics_map_local->base, write_data_buffer, length_write_data);

    hal_ll_spi_master_read_bare_metal(hal_ll_spi_master_hw_specifics_map_local->base, read_data_buffer, length_read_data, hal_ll_spi_master_hw_specifics_map_local->dummy_data);

    return HAL_LL_SPI_MASTER_SUCCESS;
}

uint32_t hal_ll_spi_master_set_speed(handle_t *handle, uint32_t speed) {
    // Get low level HAL handle.
    low_level_handle = hal_ll_spi_master_get_handle;

    // Get appropriate hw specifics map.
    hal_ll_spi_master_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_spi_master_get_module_state_address);

    low_level_handle->init_ll_state = false;

    // Insert user-defined baud rate into local map.
    hal_ll_spi_master_hw_specifics_map_local->speed = speed;

    // Init once again, but with updated SPI Master baud rate value.
    hal_ll_spi_master_init(hal_ll_spi_master_hw_specifics_map_local);

    low_level_handle->init_ll_state = true;

    // Return value of the SPI Master baud rate value.
    return hal_ll_spi_master_hw_specifics_map_local->hw_actual_speed;
}

hal_ll_err_t hal_ll_spi_master_set_mode(handle_t *handle, hal_ll_spi_master_mode_t mode) {
    // Get low level HAL handle.
    low_level_handle = hal_ll_spi_master_get_handle;
    // Get appropriate hw specifics map.
    hal_ll_spi_master_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_spi_master_get_module_state_address);

    low_level_handle->init_ll_state = false;

    // Insert user-defined mode into local map.
    hal_ll_spi_master_hw_specifics_map_local->mode = mode;

    // Init once again, but with updated SPI Master mode value.
    hal_ll_spi_master_init(hal_ll_spi_master_hw_specifics_map_local);

    low_level_handle->init_ll_state = true;

    return HAL_LL_SPI_MASTER_SUCCESS;
}

void hal_ll_spi_master_close(handle_t* handle) {
    uint32_t dummy;
    low_level_handle = hal_ll_spi_master_get_handle;
    hal_ll_spi_master_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_spi_master_get_module_state_address);

    if(low_level_handle->hal_ll_spi_master_handle != NULL) {
        low_level_handle->hal_ll_spi_master_handle  = NULL;
        low_level_handle->hal_drv_spi_master_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_spi_master_hw_specifics_map_local->mode = HAL_LL_SPI_MASTER_MODE_DEFAULT;
        hal_ll_spi_master_hw_specifics_map_local->speed = HAL_LL_SPI_MASTER_SPEED_100K;
        hal_ll_spi_master_hw_specifics_map_local->dummy_data = 0;
        hal_ll_spi_master_hw_specifics_map_local->hw_actual_speed = 0;

        hal_ll_spi_master_set_clock(hal_ll_spi_master_hw_specifics_map_local, true, &dummy);
        hal_ll_spi_master_alternate_functions_set_state(hal_ll_spi_master_hw_specifics_map_local, false);
        hal_ll_spi_master_set_clock(hal_ll_spi_master_hw_specifics_map_local, false, &dummy);

        hal_ll_spi_master_hw_specifics_map_local->pins.sck.pin_name = HAL_LL_PIN_NC;
        hal_ll_spi_master_hw_specifics_map_local->pins.miso.pin_name = HAL_LL_PIN_NC;
        hal_ll_spi_master_hw_specifics_map_local->pins.mosi.pin_name = HAL_LL_PIN_NC;
        hal_ll_spi_master_hw_specifics_map_local->pins.sck.pin_af = 0;
        hal_ll_spi_master_hw_specifics_map_local->pins.miso.pin_af = 0;
        hal_ll_spi_master_hw_specifics_map_local->pins.mosi.pin_af = 0;
    }
}

static void hal_ll_spi_master_write_bare_metal( hal_ll_spi_master_base_handle_t *hal_ll_hw_reg, uint8_t *write_data_buffer, size_t write_data_length ) {
    uint16_t transfer_counter = NULL;

    // Write the first data to be transmitted into the SPI_DR register.
    for(transfer_counter = 0; transfer_counter < write_data_length; transfer_counter++) {
        // If we are good to go ( if the tx buffer value has been shifted to the shift register ), write the data.
        hal_ll_spi_master_transfer_bare_metal( hal_ll_hw_reg, write_data_buffer[transfer_counter]);
    }
}

static void hal_ll_spi_master_read_bare_metal(hal_ll_spi_master_base_handle_t *hal_ll_hw_reg, uint8_t *read_data_buffer, size_t read_data_length, uint8_t dummy_data) {
    uint16_t transfer_counter = NULL;

    // Read the first data to be transmitted into the SPI_DR register.
    for(transfer_counter = 0; transfer_counter < read_data_length; transfer_counter++) {
        // If we are good to go ( if the value from shift register has been shifted to the rx register ), read the data.
         read_data_buffer[transfer_counter] = hal_ll_spi_master_transfer_bare_metal(hal_ll_hw_reg, dummy_data);
    }
}

static void hal_ll_spi_master_set_clock(hal_ll_spi_master_hw_specifics_map_t *map, bool hal_ll_state, uint32_t *clock_value) {
    rcc_clocks_t hal_ll_spi_clock_structure;

    RCC_GetClocksFrequency(&hal_ll_spi_clock_structure);

    switch (map->module_index) {
        #if defined(SPI_MODULE_1)
        case (hal_ll_spi_master_module_num(SPI_MODULE_1)):
            if(hal_ll_state) {
                set_reg_bit(_RCC_APB2ENR, HAL_LL_SPI1_MASTER_ENABLE);
            } else {
                clear_reg_bit(_RCC_APB2ENR, HAL_LL_SPI1_MASTER_ENABLE);
            }
            #if defined (STM32F0xx) || (STM32G0xx)
            *clock_value = hal_ll_spi_clock_structure.pclk;
            #else
            *clock_value = hal_ll_spi_clock_structure.pclk2;
            #endif
            break;
        #endif
        #if defined(SPI_MODULE_2)
        case (hal_ll_spi_master_module_num(SPI_MODULE_2)):
            if(hal_ll_state) {
                #ifdef STM32L4xx
                    set_reg_bit(_RCC_APB1ENR1, HAL_LL_SPI2_MASTER_ENABLE);
                #else
                    set_reg_bit(_RCC_APB1ENR, HAL_LL_SPI2_MASTER_ENABLE);
                #endif
            } else {
                #ifdef STM32L4xx
                    clear_reg_bit(_RCC_APB1ENR1, HAL_LL_SPI2_MASTER_ENABLE);
                #else
                    clear_reg_bit(_RCC_APB1ENR, HAL_LL_SPI2_MASTER_ENABLE);
                #endif
            }
            #if defined (STM32F0xx) || (STM32G0xx)
            *clock_value = hal_ll_spi_clock_structure.pclk;
            #else
            *clock_value = hal_ll_spi_clock_structure.pclk1;
            #endif
            break;
        #endif
        #if defined(SPI_MODULE_3)
        case (hal_ll_spi_master_module_num(SPI_MODULE_3)):
            if(hal_ll_state) {
                #ifdef STM32L4xx
                    set_reg_bit(_RCC_APB1ENR1, HAL_LL_SPI3_MASTER_ENABLE);
                #else
                    set_reg_bit(_RCC_APB1ENR, HAL_LL_SPI3_MASTER_ENABLE);
                #endif
            } else {
                #ifdef STM32L4xx
                    clear_reg_bit(_RCC_APB1ENR1, HAL_LL_SPI3_MASTER_ENABLE);
                #else
                    clear_reg_bit(_RCC_APB1ENR, HAL_LL_SPI3_MASTER_ENABLE);
                #endif
            }
            *clock_value = hal_ll_spi_clock_structure.pclk1;
            break;
        #endif
        #if defined(SPI_MODULE_4)
        case (hal_ll_spi_master_module_num(SPI_MODULE_4)):
            if(hal_ll_state) {
                set_reg_bit(_RCC_APB2ENR, HAL_LL_SPI4_MASTER_ENABLE);
            } else {
                clear_reg_bit(_RCC_APB2ENR, HAL_LL_SPI4_MASTER_ENABLE);
            }
            *clock_value = hal_ll_spi_clock_structure.pclk2;
            break;
        #endif
        #if defined(SPI_MODULE_5)
        case (hal_ll_spi_master_module_num(SPI_MODULE_5)):
            if( hal_ll_state ) {
                set_reg_bit(_RCC_APB2ENR, HAL_LL_SPI5_MASTER_ENABLE);
            } else {
                clear_reg_bit(_RCC_APB2ENR, HAL_LL_SPI5_MASTER_ENABLE);
            }
            *clock_value = hal_ll_spi_clock_structure.pclk2;
            break;
        #endif
        #if defined(SPI_MODULE_6)
        case (hal_ll_spi_master_module_num(SPI_MODULE_6)):
            if(hal_ll_state) {
                set_reg_bit(_RCC_APB2ENR, HAL_LL_SPI6_MASTER_ENABLE);
            } else {
                clear_reg_bit(_RCC_APB2ENR, HAL_LL_SPI6_MASTER_ENABLE);
            }
            *clock_value = hal_ll_spi_clock_structure.pclk2;
            break;
        #endif

    }
}

static void hal_ll_spi_master_init(hal_ll_spi_master_hw_specifics_map_t *map) {
    uint32_t clock_value;

    // Enable specific clock module.
    hal_ll_spi_master_set_clock (map, true, &clock_value);

    // Enable specific alternate functions.
    hal_ll_spi_master_alternate_functions_set_state(map, true);

    // Finally, write user-defined settings into hardware registers.
    hal_ll_spi_master_hw_init(map, clock_value);
}
